# jax-rl-playground

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  README_PENDULUM.md  conftest.py  customize.py  justfile  main.py  pyproject.toml  tach.toml  train_pendulum.py
.claude/: settings.json  settings.local.json
.claude/commands/: clean.md
.github/workflows/: ci.yml
bench/: bench_core.py
examples/: train_pendulum.py
nb/: interactive_demo.py
resources/: elsayed_code_snippets.txt  elsayed_observations.md
src/: __init__.py  advantage_normalizer.py  constants.py  core.py  normalize_obs.py
src/baseline/: __init__.py  episode_baseline.py  test.py  test_baseline.py  test_display_fix.py  test_episode_baseline.py  test_simple_baseline.py  test_training_baseline.py
src/critic/: __init__.py  test.py
src/distributions/: __init__.py  test.py
src/hypersearch/: __init__.py  test.py
src/init/: __init__.py  test.py
src/normalize/: __init__.py  test.py
src/pendulum/: __init__.py  features.py  test.py
src/policy/: __init__.py  test.py
src/policy_nnx/: __init__.py  test.py
src/reinforce/: __init__.py  test.py
src/train/: __init__.py  gae.py  lr_schedule.py  test.py  test_vectorized.py  vectorized.py
src/train/episodes/: __init__.py  test.py
src/train/metrics/: __init__.py  test.py
src/viz/: pendulum.py  test_pendulum.py
tests/: README_OPTIMIZED_TRAINING.md  analyze_trained_policy.py  benchmark_training_detailed.py  common_patterns.py  constants.py  csv_utils.py  fixtures.py  plotting_utils.py  table_utils.py  test_api.py  test_ask_tell_vmap.py  test_core.py  test_gradient_flow.py  test_gradient_flow_analysis.py  test_init_scale_layernorm.py  test_layernorm_implementation.py  test_learning_dynamics.py  test_nnx_basic.py  test_pendulum.py  test_pendulum_optimized.py  test_pendulum_performance.py  test_pendulum_single.py  test_pendulum_training.py  test_performance_improvements.py  test_policy_gradient_flow.py  test_policy_hypersearch.py  test_reinforce_training.py  test_simple_vmap_hypersearch.py  train_pendulum.py  training_utils.py  utils.py
tests/tests/: train_pendulum.py
tests/tests/outputs/pendulum_quick_test/: config.json  metrics.json
tests/tests/outputs/pendulum_test/: config.json  metrics.json
tests/tests/outputs/pendulum_working/: config.json  metrics.json
throwaway/: check_actions.py  debug_swing_up.py  debug_with_tracking.py  test_simple_reward.py  test_tanh_policy.py  train_pendulum_final.py  train_pendulum_success.py
