[project]
name = "jax-rl-playground"
version = "0.1.0"
description = "JAX RL Playground"
readme = "README.md"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = [
    # "jax[cuda12]>=0.6.2",
    # "jax[cpu]>=0.6.2",
    # Neural network library for JAX.
    "flax>=0.10.0",
    # Optimization library for JAX.
    "optax>=0.2.0",
    # RL environments.
    "gymnasium>=1.0.0",
    # Plotting.
    "matplotlib>=3.10.3",
    # Shape checking annotations.
    "jaxtyping>=0.3.2",
    # Runtime type checking backend (used by jaxtyping).
    "beartype>=0.21.0",
    # Jupyter within the venv for convenience.
    "jupyterlab>=4.4.3",
    # Interactive matplotlib widgets in Jupyter.
    "ipympl>=0.9.7",
    "jupytext>=1.17.2",
    "pandas>=2.3.0",
    "optuna>=4.4.0",
    "equinox>=0.12.2",
    "diffrax>=0.7.0",
    "jax[cuda12]>=0.6.2",
]

[project.urls]
Repository = "https://github.com/yberreby/jax-rl-playground"

[tool.ruff]
# Ignore F821 and F722 for jaxtyping string annotations
lint.ignore = ["F821", "F722"]

[dependency-groups]
dev = [
    "jax-rl-playground",
    "pre-commit>=4.2.0",
    "py>=1.11.0",
    "pytest>=8.4.1",
    "pytest-parallel>=0.1.1",
    "pytest-xdist>=3.7.0",
    "richbench>=1.0.3",
    "ruff>=0.12.0",
    "rust-just>=1.40.0",
    "tach>=0.29.0",
]

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.pytest.ini_options]
addopts = ["--tb=short", "--jaxtyping-packages=src,beartype.beartype", "--durations=10", "--durations-min=0.1"]
testpaths = ["tests", "src"]
python_files = ["test_*.py", "test.py", "*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
